@@ -519,6 +519,7 @@
 "Play count":"",
 "Player specifc settings, such as name, audio, alarms, etc.":"",
 "Player specific configuration UI, such as piCorePlayer or SqueezeAMP.":"",
+"Please note, the setting here will not affect this control point. To change the library of this control point you need to use the context menu button for 'My Music', or use the 'Change library' button when browsing 'My Music'":"",
 "Reload":"",
 "Replace player's icon in toolbar with a power button.":"",
 "Save as virtual library":"",
